Fix size of recipe card on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,10 @@
   border-radius: 14px;
 }
 .recipes-seciton {
-  padding: 1rem;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   margin: 0 auto;
   max-width: 1500px;
   min-width: 300px;
@@ -51,5 +54,11 @@
   .input-container {
     grid-template-columns: 1fr;
     justify-items: end;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .recipes-seciton {
+    padding: 1rem;
   }
 }
