--- a/src/components/RecipeCard.module.css
+++ b/src/components/RecipeCard.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  min-width: 250px;
 }
 .container:hover {
   box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.08);
@@ -19,4 +20,8 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 0.4rem;
+}
+
+.container h5 {
+  font-weight: bold;
 }
